Add Logout by user
